Fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 .App {
